crates/eosio_macros/tests/ui/name-too-long.rs
extern crate eosio_macros;

use eosio_macros::n;

fn main() {
    let _ = n!("12345123451234");
}
